WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
145708
Regression(
r176212
): Broke app switching on iCloud.com
https://bugs.webkit.org/show_bug.cgi?id=145708
Summary
Regression(r176212): Broke app switching on iCloud.com
Chris Dumez
Reported
2015-06-05 12:16:34 PDT
r176212
added support for throttling specific DOMTimers that are updating the style of Element outside the viewport for performance reasons. However, it appears this change broke app switching on iCloud.com, hinting that such throttling may not be safe. Radar: <
rdar://problem/21235277
>
Attachments
Patch
(19.74 KB, patch)
2015-06-05 13:19 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(43.58 KB, patch)
2015-06-05 14:01 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2015-06-05 13:19:35 PDT
Created
attachment 254375
[details]
Patch
Simon Fraser (smfr)
Comment 2
2015-06-05 13:43:21 PDT
Don't you also need to revert some tests?
Chris Dumez
Comment 3
2015-06-05 13:53:42 PDT
Comment on
attachment 254375
[details]
Patch Right! the tests...
Chris Dumez
Comment 4
2015-06-05 14:01:28 PDT
Created
attachment 254380
[details]
Patch
WebKit Commit Bot
Comment 5
2015-06-05 15:10:48 PDT
Comment on
attachment 254380
[details]
Patch Clearing flags on attachment: 254380 Committed
r185269
: <
http://trac.webkit.org/changeset/185269
>
WebKit Commit Bot
Comment 6
2015-06-05 15:10:56 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug