Source/WebCore/dom/ElementRareData.h
@@ -35,7 +35,7 @@ namespace WebCore {
 
 class ElementRareData : public NodeRareData {
 public:
-    ElementRareData(Element&, RenderElement*);
+    explicit ElementRareData(RenderElement*);
     ~ElementRareData();
 
     void setBeforePseudoElement(RefPtr<PseudoElement>&&);
@@ -113,8 +113,6 @@ public:
     bool hasPendingResources() const { return m_hasPendingResources; }
     void setHasPendingResources(bool has) { m_hasPendingResources = has; }
 
-    WeakPtrFactory<Element>& weakPtrFactory() { return m_weakPtrFactory; }
-
 private:
     short m_tabIndex;
     unsigned short m_childIndex;
@@ -148,7 +146,6 @@ private:
 
     RefPtr<PseudoElement> m_beforePseudoElement;
     RefPtr<PseudoElement> m_afterPseudoElement;
-    WeakPtrFactory<Element> m_weakPtrFactory;
 
     void releasePseudoElement(PseudoElement*);
 };
@@ -158,7 +155,7 @@ inline IntSize defaultMinimumSizeForResizing()
     return IntSize(LayoutUnit::max(), LayoutUnit::max());
 }
 
-inline ElementRareData::ElementRareData(Element& element, RenderElement* renderer)
+inline ElementRareData::ElementRareData(RenderElement* renderer)
     : NodeRareData(renderer)
     , m_tabIndex(0)
     , m_childIndex(0)
@@ -177,7 +174,6 @@ inline ElementRareData::ElementRareData(Element& element, RenderElement* rendere
     , m_childrenAffectedByPropertyBasedBackwardPositionalRules(false)
     , m_regionOversetState(RegionUndefined)
     , m_minimumSizeForResizing(defaultMinimumSizeForResizing())
-    , m_weakPtrFactory(&element)
 {
 }
 
